Added loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,6 @@
 
   <!-- If JS is disabled -->
   <noscript>
-
     <div ng-if="currentPage != ''" id="header">
       <div id="navigation">
         <a id="nav-home" href="/">
@@ -49,6 +48,15 @@
     </div>   
   </noscript>
 
+  <!-- Loading screen 
+  <div id="loading-screen" ng-if="false">
+    <div id="loading-content">
+      <img src="/assets/images/core/logo-small-dark.png" alt="CSS Bristol logo" />
+      Loading...
+    </div>
+  </div>
+  -->
+  
   <div header></div>
 
   <!-- Page content -->
