Initial version of tutorials listing
Currently no actual pages backing the listing; need to reformat; no filtering/sorting as the Isotope support is hardcoded for the Jobs board

--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,10 @@
     <div id="noscript-warning">
       <div class="section-title align-left">JavaScript required</div>
       <div class="section-content">Uh oh! Please enable JavaScript to view this website. <a href="/">Reload page</a></div>
-    </div>   
+    </div>
   </noscript>
 
-  <!-- Loading screen 
+  <!-- Loading screen
   <div id="loading-screen" ng-if="false">
     <div id="loading-content">
       <img src="/assets/images/core/logo-small-dark.png" alt="CSS Bristol logo" />
@@ -56,16 +56,16 @@
     </div>
   </div>
   -->
-  
+
   <div header></div>
 
   <!-- Page content -->
   <div id="content">
     <div ng-view></div>
   </div>
-  
+
   <div footer></div>
-  
+
   <!-- build:js(.) assets/scripts/vendor.js -->
   <!-- bower:js -->
   <script src="/bower_components/fastclick/lib/fastclick.js"></script>
@@ -76,7 +76,7 @@
   <script src="/bower_components/angular-animate/angular-animate.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
-  
+
   <!-- build:js assets/scripts/app.js -->
   <script src="/app/app.js"></script>
   <script src="/app/appController.js"></script>
@@ -90,6 +90,8 @@
   <script src="/app/components/main/mainController.js"></script>
 
   <script src="/app/components/jobs/jobController.js"></script>
+
+  <script src="/app/components/tutorials/tutorialsController.js"></script>
 
   <script src="/app/partials/header/headerController.js"></script>
   <script src="/app/partials/header/headerDirective.js"></script>
